--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Capsule\\Setting\\": "capsule/src/setting/"
         }
     },
     "autoload-dev": {
