--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "yajra/laravel-datatables-oracle": "^6.11"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
